Trying to resolve testimonials title alignment issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -722,19 +722,19 @@ footer {
     }
 }
 
-/*
-Testimonials styles
-*/
-
-#testimonials {
-    padding: 50px 15px;
-    text-align: center;
-    border-bottom: 1px solid $border;
-
-    h2 {
-        color: $heading;
-    }
-}
+// /*
+// Testimonials styles
+// */
+//
+// #testimonials {
+//     padding: 50px 15px;
+//     text-align: center;
+//     border-bottom: 1px solid $border;
+//
+//     h2 {
+//         color: $heading;
+//     }
+// }
 
 /*
     -------------------------------
